# federated-learning-diabetes

./: .gitignore  README.md  broken_client.py  pyproject.toml  requirements.txt  run.sh  working_client.py
pytorch_example/: run.sh  utils.py  working_client.py
sklearn_example/: central_feature_importances.txt  client.py  client_6_feature_importances.txt  client_data_lengts.txt  client_unique_data_lengts.txt  dirichlet_dist.py  dirichlet_sample.txt  drichlet_dist.py  metrics.py  run.sh  server.py  traditional_feature_importances.txt  utils.py
