[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "federated-learning-medical-data"
version = "0.1.0"
description = "Federated Learning Medical Domain Example with Flower"
authors = ["Emre Demir <emredemireng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.0.0"
scikit-learn = "^1.1.1"
tqdm = "^4.63.0"
wandb = "^0.15.4"
pandas = "^2.0.2"
